[package]
name = "mixed-pickles"
version = "0.4.0"
edition = "2024"

[lib]
name = "mixed_pickles"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "mixed-pickles"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1"
thiserror = "2.0"

[dependencies.pyo3]
version = "0.27.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
