[package]
name = "mixed-pickles"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "mixed_pickles"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "mixed-pickles"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"

[dependencies.pyo3]
version = "0.27.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]

[dev-dependencies]
tempfile = "3"
