[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mixed-pickles"
requires-python = ">=3.9"
dynamic = ["version"]

[project.scripts]
mixed-pickles = "mixed_pickles:main"

[tool.maturin]
module-name = "mixed_pickles"

[project.optional-dependencies]
dev = ["pytest>=7.0", "maturin>=1.0,<2.0"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
